# advent-of-code-2025

./: aoc2025.cabal  flake.nix
src/: Day01.hs  Day02.hs  Day03.hs  Day04.hs  Day05.hs  Day06.hs
