cabal-version:   3.0
name:            aoc2025
version:         0.1.0.0
author:          Mukize
maintainer:      patrickmukize@gmail.com
build-type:      Simple

common shared
  ghc-options: -Wall
  build-depends: base
  hs-source-dirs: src
  default-language: Haskell2010

executable day01
    import:           shared
    main-is:          Day01.hs

executable day02
    import:           shared
    main-is:          Day02.hs
    build-depends:    split

executable day03
    import:           shared
    main-is:          Day03.hs

executable day04
    import:           shared
    main-is:          Day04.hs
